--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,26 @@
-<p>about works!</p>
+<!-- about------------------------------------------------------------------------ -->
+<section id="aboutMe">
+    <div id="aboutMeContainer">
+        <div id="imgAbout">
+            <img id="imgAbout1" src="../assets/media/about.jpg" alt="About">
+            <img id="imgAbout2" src="../assets/media/74553037.jpeg" alt="About">
+
+        </div>
+        <div id="textAbout">
+            <h3 id="titles">
+                Who's this guy
+            </h3>
+            <span id="descriptionAbout">
+                My concept is never stop to learn that's why I've got a personal interest for continuous learning and
+                self
+                improvement.
+                My concept is never stop to learn that's why I've got a personal interest for continuous learning and
+                self
+                improvement.
+                My concept is never stop to learn that's why I've got a personal interest for continuous learning and
+                self
+                improvement.
+            </span>
+        </div>
+    </div>
+</section>
