--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -1,1 +1,56 @@
-<p>create works!</p>
+<div id="createProject">
+    <div id="imgCreateProject">
+        <div id="tilleImgCreateProject">
+            <h1>Another <br>project</h1>
+        </div>
+
+    </div>
+
+    <div class="containerForm">
+        <h2>{{title}}</h2>
+
+        <form #projectForm="ngForm" (ngSubmit)="onSubmit(projectForm)">
+            <span>
+                <!-- <label for="name">Name</label> -->
+                <input type="text" name="name" #name="ngModel" [(ngModel)]="project.name" placeholder="Name" required>
+                <span class="formError" *ngIf="name.touched && !name.valid">The name is required</span>
+            </span>
+            <span>
+                <!-- <label for="description">Description</label> -->
+                <textarea name="description" #description="ngModel" [(ngModel)]="project.description"
+                    placeholder="Description" required></textarea>
+                <span class="formError" *ngIf="description.touched && !description.valid">The description is
+                    required</span>
+            </span>
+            <span>
+                <!-- <label for="category">Category</label> -->
+                <input type="text" name="category" #category="ngModel" [(ngModel)]="project.category"
+                    placeholder="Category" required>
+                <span class="formError" *ngIf="category.touched && !category.valid">The category is required</span>
+            </span>
+            <span>
+                <!-- <label for="langs">Languages</label> -->
+                <input type="text" name="langs" #langs="ngModel" [(ngModel)]="project.langs" placeholder="Languages"
+                    required>
+                <span class="formError" *ngIf="langs.touched && !langs.valid">The languages are required</span>
+
+
+            </span>
+            <div class="OpenAndSubmit">
+                <div class="file">
+                    <!-- El for 'image' y el id 'image' hace que pueda esconder el input -->
+                    <label for="image">Open
+                        <fa-icon [icon]="faFolderOpen" id="iconFolder"></fa-icon>
+                    </label>
+                    <input type="file" name="image" id="image">
+                </div>
+                <span class="submitForm">
+                    <input type="submit" name="" id="" value="Submit" placeholder="Submit"
+                        [disabled]="!projectForm.form.valid">
+                </span>
+            </div>
+        </form>
+
+    </div>
+
+</div>
