--- a/src/styles.scss
+++ b/src/styles.scss
@@ -342,8 +342,11 @@ form input[disabled] {
 }
 
 .formError {
-  color: red;
+  color: rgba(255, 0, 0, 0.705);
   font-family: $textFontGeneral;
-  font-size: 1.1rem;
+  font-size: 2rem;
   margin: 5px;
+}
+.visibilityTransparent {
+  visibility: hidden;
 }
