--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,7 +84,6 @@ header {
   width: 50px;
   background-color: $backgroundColorDarkPrimary;
   border-top: 1px solid $TextColorGlobalSecundary;
-  border-right: 1px solid $TextColorGlobalSecundary;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -93,28 +92,33 @@ header {
 #day {
   top: 400px;
   left: 0;
+  border-right: 1px solid $TextColorGlobalSecundary;
 }
 
 #night {
   top: 450px;
   left: 0;
   border-bottom: 1px solid $TextColorGlobalSecundary;
+  border-right: 1px solid $TextColorGlobalSecundary;
 }
 
 #linkedin {
   top: 400px;
   right: 0;
+  border-left: 1px solid $TextColorGlobalSecundary;
 }
 
 #youtube {
   top: 450px;
   right: 0;
+  border-left: 1px solid $TextColorGlobalSecundary;
 }
 
 #github {
   top: 500px;
   right: 0;
   border-bottom: 1px solid $TextColorGlobalSecundary;
+  border-left: 1px solid $TextColorGlobalSecundary;
 }
 .socialIcons {
   color: $backgroundColorGlobalSecundary;
@@ -156,6 +160,24 @@ nav a {
 nav a:hover,
 .actived {
   border: 3px solid $TextColorGlobalPrimary;
+}
+/*****************************************Footer******************************/
+footer {
+  display: flex;
+  width: 100%;
+  height: 250px;
+  background-color: $backgroundColorDarkSecundary;
+  color: $TextColorGlobalSecundary;
+  justify-content: center;
+}
+.footerTextContainer {
+  margin-top: 150px;
+}
+.footerText {
+  font-family: $textFontGeneral;
+  font-size: 1.1rem;
+  text-align: center;
+  margin-top: 5px;
 }
 
 /*------------------------------------------------About---------------------*/
@@ -349,4 +371,58 @@ form input[disabled] {
 }
 .visibilityTransparent {
   visibility: hidden;
+}
+
+/******************************************PORTFOLIO***************************************/
+
+.portfolioPage {
+  height: auto;
+  width: 100%;
+  background-color: $backgroundColorGlobalSecundary;
+  display: flex;
+  justify-content: center;
+}
+.containerTitle {
+  width: 65%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.containerTitle h2 {
+  font-family: $titleFont;
+  font-size: 40px;
+  color: $TextColorGlobalPrimary;
+  font-weight: 400;
+  margin-bottom: 30px;
+  margin-top: 125px;
+}
+.containerTitle span {
+  width: 50%;
+  margin-bottom: 50px;
+  color: $TextColorGlobalSecundary;
+}
+.projectsContainer {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+}
+.projectView {
+  width: 25%;
+  float: left;
+  list-style: none;
+}
+.projectView img {
+  width: 100% !important;
+  background-color: red;
+}
+
+.projectView h3 {
+  text-align: center;
+}
+.projectView span {
+  font-size: 0.9rem;
+  width: 70%;
+  color: $TextColorGlobalSecundary;
+  text-align: center;
 }
