Portfolio Backend v1.0 complete

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,16 +1,16 @@
 <!-- about------------------------------------------------------------------------ -->
-<section id="aboutMe">
-    <div id="aboutMeContainer">
+<section class="aboutMe">
+    <div class="aboutMeContainer">
         <div id="imgAbout">
             <img id="imgAbout1" src="../assets/media/about.jpg" alt="About">
             <img id="imgAbout2" src="../assets/media/74553037.jpeg" alt="About">
 
         </div>
-        <div id="textAbout">
-            <h3 id="titles">
+        <div class="textAbout">
+            <h3 class="titles">
                 Who's this guy
             </h3>
-            <span id="descriptionAbout">
+            <span class="descriptionAbout">
                 My concept is never stop to learn that's why I've got a personal interest for continuous learning and
                 self
                 improvement.
